--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@types/aws-lambda": "^8.10.109",
     "@types/node": "^18.11.17",
+    "node-fetch": "^3.3.0",
     "typescript": "^4.9.3"
   },
   "bugs": {
