--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,8 @@
     "module": "esnext",
     "moduleResolution": "nodenext",
     "outDir": "./dist",
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
   },
-  "include": ["src"],
+  "include": ["src", "types.d.ts"],
   "exclude": []
 }
