--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "open-next",
-  "version": "0.0.1",
+  "name": "@townsheriff/open-next",
+  "version": "0.0.3",
   "description": "Open source Next.js serverless adapter",
   "homepage": "https://open-next.js.org",
   "type": "module",
   "main": "src/build",
   "bin": {
-    "open-next": "./dist/index.js"
+    "open-next": "dist/index.js"
   },
   "scripts": {
     "build": "tsc",
@@ -39,5 +39,9 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/serverless-stack/open-next.git"
+  },
+  "directories": {
+    "doc": "docs",
+    "example": "example"
   }
 }
