--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -38,6 +38,7 @@
     "@aws-sdk/client-s3": "^3.234.0",
     "@node-minify/core": "^8.0.6",
     "@node-minify/terser": "^8.0.6",
+    "@aws-sdk/client-sqs": "^3.312.0",
     "@tsconfig/node18": "^1.0.1",
     "esbuild": "^0.15.18",
     "promise.series": "^0.2.0",
