--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -1,20 +1,21 @@
 {
   "publishConfig": {
-    "directory": "dist",
     "access": "public"
   },
   "name": "open-next",
   "version": "1.1.0",
   "bin": {
-    "open-next": "./index.js"
+    "open-next": "./dist/index.js"
   },
   "license": "MIT",
   "type": "module",
   "description": "Open source Next.js serverless adapter",
   "homepage": "https://open-next.js.org",
-  "main": "index.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rm -rf dist/assets && mkdir -p dist && cp -r assets dist/assets && tsc",
+    "build": "tsc",
     "dev": "tsc -w"
   },
   "keywords": [],
@@ -25,6 +26,7 @@
     "@node-minify/terser": "^8.0.6",
     "@tsconfig/node18": "^1.0.1",
     "esbuild": "^0.15.18",
+    "open-next": "^1.1.0",
     "promise.series": "^0.2.0",
     "yargs": "^17.6.2"
   },
