--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -1,21 +1,20 @@
 {
   "publishConfig": {
+    "directory": "dist",
     "access": "public"
   },
   "name": "open-next",
   "version": "1.1.0",
   "bin": {
-    "open-next": "./dist/index.js"
+    "open-next": "./index.js"
   },
   "license": "MIT",
   "type": "module",
   "description": "Open source Next.js serverless adapter",
   "homepage": "https://open-next.js.org",
-  "main": "./dist/index.js",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "main": "index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf dist/assets && mkdir -p dist && cp -r assets dist/assets && tsc",
     "dev": "tsc -w"
   },
   "keywords": [],
