--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -42,6 +42,7 @@
     "@tsconfig/node18": "^1.0.1",
     "esbuild": "^0.18.18",
     "@esbuild-plugins/node-resolve": "0.2.2",
+    "path-to-regexp": "^6.2.1",
     "promise.series": "^0.2.0"
   },
   "devDependencies": {
