--- a/packages/open-next/tsconfig.json
+++ b/packages/open-next/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "declaration": true,
     "module": "esnext",
-    "lib": ["DOM"],
-    "moduleResolution": "NodeNext",
+    "lib": ["DOM", "ESNext"],
     "outDir": "./dist",
     "allowSyntheticDefaultImports": true
   }
