Feat: Add unit and e2e testing

--- a/example/package.json
+++ b/example/package.json
@@ -2,6 +2,7 @@
   "name": "open-next-benchmark",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "sst bind next dev",
     "build": "next build",
@@ -22,6 +23,6 @@
   "devDependencies": {
     "aws-cdk-lib": "2.84.0",
     "constructs": "10.1.156",
-    "sst": "2.16.3"
+    "sst": "2.24.2"
   }
 }
