--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "pnpm -r build",
+    "dev": "turbo run dev",
+    "build": "turbo run build",
+    "clean": "turbo run clean",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "lint:fix": "eslint --fix --ext .js,.ts,.tsx .",
     "version": "./.changeset/version",
@@ -19,7 +21,8 @@
     "@changesets/changelog-github": "^0.4.4",
     "@changesets/cli": "^2.22.0",
     "@sladg/eslint-config-base": "1.4.1",
-    "eslint": "^8.47.0"
+    "eslint": "^8.47.0",
+     "turbo": "1.10.12"
   },
   "engines": {
     "node": ">=16",
