--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "@changesets/cli": "^2.22.0",
     "@sladg/eslint-config-base": "1.4.1",
     "eslint": "^8.47.0"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
