--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -44,8 +44,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Check prettier
-        run: pnpm prettier --cache -c --loglevel=error .
+      - name: Check codestyle
+        run: pnpm lint
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
