--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   "scripts": {
     "dev": "turbo run dev",
     "build": "turbo run build",
-    "clean": "turbo run clean",
+    "clean": "turbo run clean && rm -rf node_modules pnpm-lock.yaml",
     "lint": "eslint --ext .js,.ts,.tsx .",
     "lint:fix": "eslint --fix --ext .js,.ts,.tsx .",
     "version": "./.changeset/version",
     "release": "./.changeset/release",
     "release-snapshot": "./.changeset/snapshot"
+    
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.4.4",
