--- a/packages/utils/tsconfig.json
+++ b/packages/utils/tsconfig.json
@@ -3,7 +3,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": false,
-    "moduleResolution": "node",
+    "moduleResolution": "NodeNext",
+    "module": "NodeNext",
     "preserveWatchOutput": true,
     "skipLibCheck": true,
     "noEmit": true,
