--- a/packages/pages-only/package.json
+++ b/packages/pages-only/package.json
@@ -4,10 +4,11 @@
   "private": true,
   "scripts": {
     "openbuild": "node ../open-next/dist/index.js build",
-    "dev": "next dev --port 3001",
+    "dev": "next dev --port 3002",
     "build": "next build",
-    "start": "next start --port 3001",
-    "lint": "next lint"
+    "start": "next start --port 3002",
+    "lint": "next lint",
+     "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "dependencies": {
     "@next/font": "13.4.16",
