Fix aws credentials

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -4,27 +4,27 @@ on:
   pull_request:
     types: [opened, synchronize]
 
-
-
 env:
   PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
   PLAYWRIGHT_BROWSERS_PATH: 0
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+permissions:
+  id-token: write   # This is required for requesting the JWT
+  contents: read    # This is required for actions/checkout
+
 jobs:
   e2e:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write   # This is required for requesting the JWT
-      contents: read    # This is required for actions/checkout
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: configure aws credentials
-        uses: aws-actions/configure-aws-credentials@master
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2
         with:
           role-to-assume: arn:aws:iam::918074996169:role/GitHub
+          role-session-name: github-e2e-session
           aws-region: us-east-1
 
       - name: Setup pnpm
