--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -5,6 +5,7 @@ on:
     types: [opened, synchronize]
 
 env:
+  AWS_REGION: us-east-1
   PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD: 1
   PLAYWRIGHT_BROWSERS_PATH: 0
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -25,7 +26,7 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::918074996169:role/GitHub
           role-session-name: github-e2e-session
-          aws-region: us-east-1
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
