--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -2,13 +2,12 @@ name: AWS Tests
 
 on: push
 
-permissions:
-  id-token: write # This is required for requesting the JWT
-  contents: read # This is required for actions/checkout
-
 jobs:
   S3PackageUpload:
     runs-on: ubuntu-latest
+    env:
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v3
