--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -39,6 +39,7 @@
     "@aws-sdk/client-sqs": "^3.398.0",
     "@node-minify/core": "^8.0.6",
     "@node-minify/terser": "^8.0.6",
+    "@open-next/utils": "workspace:*",
     "@tsconfig/node18": "^1.0.1",
     "esbuild": "^0.18.18",
     "@esbuild-plugins/node-resolve": "0.2.2",
