--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -40,7 +40,7 @@
     "@node-minify/core": "^8.0.6",
     "@node-minify/terser": "^8.0.6",
     "@tsconfig/node18": "^1.0.1",
-    "esbuild": "^0.18.18",
+    "esbuild": "0.19.2",
     "@esbuild-plugins/node-resolve": "0.2.2",
     "path-to-regexp": "^6.2.1",
     "promise.series": "^0.2.0"
