--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -3,7 +3,7 @@
     "access": "public"
   },
   "name": "open-next",
-  "version": "0.0.0-tags-13.5",
+  "version": "0.0.0-tags-13.5-2",
   "bin": {
     "open-next": "./dist/index.js"
   },
