--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,6 @@
   "files.exclude": {
     "**/.turbo": true
   },
-  "tailwindCSS.classAttributes": [
-    "class",
-    "className",
-    "tw"
-  ],
+  "tailwindCSS.classAttributes": ["class", "className", "tw"],
+  "prettier.trailingComma": "all"
 }
