--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -52,10 +52,10 @@
     "typescript": "^4.9.3"
   },
   "bugs": {
-    "url": "https://github.com/serverless-stack/open-next/issues"
+    "url": "https://github.com/sst/open-next/issues"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/serverless-stack/open-next.git"
+    "url": "git+https://github.com/sst/open-next.git"
   }
 }
