--- a/examples/pages-router/package.json
+++ b/examples/pages-router/package.json
@@ -16,7 +16,7 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "next": "latest",
+    "next": "^14.0.3",
     "postcss": "8.4.27",
     "react": "latest",
     "react-dom": "latest",
