--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -3,7 +3,7 @@
     "access": "public"
   },
   "name": "open-next",
-  "version": "2.3.3",
+  "version": "3.0.0-rc.1",
   "bin": {
     "open-next": "./dist/index.js"
   },
