--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -42,6 +42,7 @@
     "@node-minify/core": "^8.0.6",
     "@node-minify/terser": "^8.0.6",
     "@tsconfig/node18": "^1.0.1",
+    "chalk": "^5.3.0",
     "esbuild": "0.19.2",
     "path-to-regexp": "^6.2.1",
     "promise.series": "^0.2.0"
