--- a/packages/open-next/tsconfig.json
+++ b/packages/open-next/tsconfig.json
@@ -10,6 +10,7 @@
       "types/*": ["./src/types/*"],
       "config/*": ["./src/adapters/config/*"],
       "http/*": ["./src/http/*"],
+      "utils/*": ["./src/utils/*"],
     }
   }
 }
