--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -46,7 +46,8 @@
     "chalk": "^5.3.0",
     "esbuild": "0.19.2",
     "path-to-regexp": "^6.2.1",
-    "promise.series": "^0.2.0"
+    "promise.series": "^0.2.0",
+    "urlpattern-polyfill": "^10.0.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.109",
