--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -2,7 +2,7 @@
   "publishConfig": {
     "access": "public"
   },
-  "name": "open-next",
+  "name": "@opennextjs/aws",
   "version": "3.1.3",
   "bin": {
     "open-next": "./dist/index.js"
