--- a/examples/app-router/package.json
+++ b/examples/app-router/package.json
@@ -14,7 +14,7 @@
     "@example/shared": "workspace:*",
     "@open-next/utils": "workspace:*",
     "next": "^14.1.4",
-    "@opennextjs/aws",
+    "@opennextjs/aws": "workspace:*",
     "react": "latest",
     "react-dom": "latest"
   },
