--- a/examples/app-pages-router/package.json
+++ b/examples/app-pages-router/package.json
@@ -14,7 +14,7 @@
     "@example/shared": "workspace:*",
     "@open-next/utils": "workspace:*",
     "next": "^14.0.3",
-    "open-next": "workspace:*",
+    "@opennextjs/aws": "workspace:*",
     "react": "latest",
     "react-dom": "latest"
   },
