--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -5,7 +5,8 @@
   "name": "@opennextjs/aws",
   "version": "3.1.3",
   "bin": {
-    "open-next": "./dist/index.js"
+    "open-next": "./dist/index.js",
+    "@opennextjs/aws": "./dist/index.js"
   },
   "license": "MIT",
   "type": "module",
