added changelog github

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://unpkg.com/@changesets/config@2.3.0/schema.json",
-  "changelog": "@changesets/cli/changelog",
+  "changelog": [
+    "@changesets/changelog-github",
+    { "repo": "opennextjs/opennextjs-aws" }
+  ],
   "commit": false,
   "fixed": [["@opennextjs/aws"]],
   "linked": [],
