--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -61,7 +61,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/opennextjs/opennextjs-aws.git",
+    "url": "https://github.com/opennextjs/opennextjs-aws",
     "directory": "packages/open-next"
   }
 }
