--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -61,6 +61,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sst/open-next.git"
+    "url": "https://github.com/opennextjs/opennextjs-aws",
+    "directory": "packages/open-next"
   }
 }
