test: use the latest NPM release

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Get Latest Next Version
         id: get_latest_version
         run: |
-          latest_version=$(curl -s https://api.github.com/repos/vercel/next.js/releases/latest | jq -r '.tag_name')
+          latest_version=$(curl -s https://registry.npmjs.org/-/package/next/dist-tags | jq -r '.latest')
           echo "Latest version: $latest_version"
           echo "LATEST_VERSION=$latest_version" >> $GITHUB_ENV
           echo "LATEST_VERSION=$latest_version" >> $GITHUB_OUTPUT
