chore: bump node to 18 and pnpm >= 8 <9 in engines

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "turbo": "1.10.12"
   },
   "engines": {
-    "node": ">=16",
-    "pnpm": ">=8"
+    "node": ">=18",
+    "pnpm": ">=8 <9"
   }
 }
