--- a/examples/app-router/package.json
+++ b/examples/app-router/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "openbuild": "node ../../packages/open-next/dist/index.js build --streaming --build-command \"npx turbo build\"",
-    "dev": "next dev --port 3001",
+    "dev": "next dev --turbopack --port 3001",
     "build": "next build",
     "start": "next start --port 3001",
     "lint": "next lint",
@@ -13,15 +13,15 @@
   "dependencies": {
     "@example/shared": "workspace:*",
     "@open-next/utils": "workspace:*",
-    "next": "^14.1.4",
+    "next": "15.0.1",
     "@opennextjs/aws": "workspace:*",
-    "react": "latest",
-    "react-dom": "latest"
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
   "devDependencies": {
     "@types/node": "20.5.0",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "10.4.15",
     "postcss": "8.4.27",
     "tailwindcss": "3.3.3",
