--- a/examples/pages-router/package.json
+++ b/examples/pages-router/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "openbuild": "node ../../packages/open-next/dist/index.js build --build-command \"npx turbo build\"",
-    "dev": "next dev --port 3002",
+    "dev": "next dev --turbopack --port 3002",
     "build": "next build",
     "start": "next start --port 3002",
     "lint": "next lint",
@@ -13,14 +13,16 @@
   "dependencies": {
     "@example/shared": "workspace:*",
     "@types/node": "20.5.0",
-    "@types/react": "18.2.20",
-    "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
-    "next": "^14.0.3",
+    "next": "15.0.1",
     "postcss": "8.4.27",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "tailwindcss": "3.3.3",
     "typescript": "^4.9.3"
+  },
+  "devDependencies": {
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
