--- a/examples/shared/package.json
+++ b/examples/shared/package.json
@@ -5,7 +5,8 @@
     "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "dependencies": {
-    "react": "19.0.0-rc-69d4b800-20241021"
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021"
   },
   "devDependencies": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
