--- a/example/package.json
+++ b/example/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "aws-cdk-lib": "2.84.0",
     "constructs": "10.1.156",
-    "sst": "2.16.3"
+    "sst": "2.16.3",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
