--- a/packages/open-next/package.json
+++ b/packages/open-next/package.json
@@ -10,7 +10,7 @@
   "license": "MIT",
   "type": "module",
   "description": "Open source Next.js serverless adapter",
-  "homepage": "https://open-next.js.org",
+  "homepage": "https://opennext.js.org/aws",
   "main": "./dist/index.js",
   "scripts": {
     "build": "tsc && tsc-alias",
