--- a/example/package.json
+++ b/example/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "sst bind next dev",
+    "dev": "sst bind next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "deploy": "sst deploy"
@@ -11,10 +11,10 @@
   "dependencies": {
     "dayjs": "^1.11.9",
     "gray-matter": "^4.0.3",
-    "next": "13.4.12",
+    "next": "15.0.1",
     "next-auth": "^4.22.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
     "remark": "^13.0.0",
     "remark-html": "^13.0.2",
     "swr": "^1.0.1"
@@ -22,6 +22,8 @@
   "devDependencies": {
     "aws-cdk-lib": "2.84.0",
     "constructs": "10.1.156",
-    "sst": "2.16.3"
+    "sst": "2.16.3",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
   }
 }
