--- a/examples/sst/package.json
+++ b/examples/sst/package.json
@@ -4,10 +4,9 @@
   "type": "module",
   "private": true,
   "scripts": {},
-  "dependencies": {},
   "devDependencies": {
-    "aws-cdk-lib": "2.101.1",
-    "constructs": "10.2.69",
-    "sst": "2.35.1"
+    "aws-cdk-lib": "2.161.1",
+    "constructs": "10.3.0",
+    "sst": "^2.43.6"
   }
 }
