add main prereleases

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -6,6 +6,11 @@ on:
       - main
     paths:
       - packages/open-next/**
+  push:
+    branches:
+      - main
+    paths:
+      - packages/open-next/**
 
 jobs:
   release:
