add experimental prerelease

--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -2,13 +2,11 @@ name: Pre-release
 
 on:
   pull_request:
-    branches:
-      - main
+    branches: [main, experimental]
     paths:
       - packages/open-next/**
   push:
-    branches:
-      - main
+    branches: [main, experimental]
     paths:
       - packages/open-next/**
 
