--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,12 +17,7 @@ jobs:
         uses: actions/checkout@v4
 
       - uses: ./.github/actions/pnpm-setup
-
-      - name: Install dependencies
-        run: pnpm install
-
-      - name: Check codestyle
-        run: pnpm lint
+      - uses: ./.github/actions/lint
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
