chore(lint): apply biome safe fixes

--- a/examples/shared/tsconfig.json
+++ b/examples/shared/tsconfig.json
@@ -1,12 +1,6 @@
 {
-  "include": [
-    "."
-  ],
-  "exclude": [
-    "dist",
-    "build",
-    "node_modules"
-  ],
+  "include": ["."],
+  "exclude": ["dist", "build", "node_modules"],
   "compilerOptions": {
     "composite": false,
     "declaration": false,
