--- a/turbo.json
+++ b/turbo.json
@@ -1,18 +1,10 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalEnv": [
-    "APP_ROUTER_URL",
-    "PAGES_ROUTER_URL",
-    "APP_PAGES_ROUTER_URL"
-  ],
+  "globalEnv": ["APP_ROUTER_URL", "PAGES_ROUTER_URL", "APP_PAGES_ROUTER_URL"],
   "pipeline": {
     "build": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": [
-        "dist/**"
-      ]
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**"]
     },
     "e2e:test": {
       "cache": false
