chore(vscode): configure biome as default formatter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,22 @@
     "**/.turbo": true
   },
   "tailwindCSS.classAttributes": ["class", "className", "tw"],
-  "prettier.trailingComma": "all"
+  "[typescript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[typescriptreact]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[javascriptreact]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[css]": {
+    "editor.defaultFormatter": "biomejs.biome"
+  }
 }
