chore(lint): update lint script to include format and import sort checks

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "turbo run dev",
     "build": "turbo run build",
     "clean": "turbo run clean && rm -rf node_modules pnpm-lock.yaml",
-    "lint": "biome lint",
-    "lint:fix": "biome lint --fix",
+    "lint": "biome check",
+    "lint:fix": "biome check --fix",
     "test": "turbo run test",
     "e2e:test": "turbo run e2e:test",
     "version": "./.changeset/version",
