chore: configure biome linter (#616)
* chore(lint): move to biome instead of eslint (#538)

* chore(lint): apply biome safe fixes

* chore: add .git-blame-ignore-revs with bulk formatting/linting changes

- Added .git-blame-ignore-revs file to exclude commit b36196d4ff17934ed71b0926effa20a5a6c1433d from `git blame`
  to improve readability by ignoring non-functional bulk edits made by Biome formatter and linter.

* chore(lint): disable a11y rules in biome config

* chore(vscode): add biome extension to recommended

* chore(vscode): configure biome as default formatter

* chore(lint): update lint script to include format and import sort checks

* chore: remove .editorconfig in favor of Biome configuration

--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -8,15 +8,12 @@
   },
   "typesVersions": {
     "*": {
-      "types": [
-        "./dist/*.d.ts"
-      ]
+      "types": ["./dist/*.d.ts"]
     }
   },
   "scripts": {
     "build": "tsup ./src/*.ts --format cjs --dts",
     "dev": "tsup ./src/*.ts --format cjs --dts --watch",
-    "lint": "TIMING=1 eslint \"**/*.ts*\"",
     "clean": "rm -rf .turbo && rm -rf node_modules"
   },
   "dependencies": {},
